[package]
name = "orgtabler"
version = "0.3.1"
authors = ["JuanLeon Lahoz <juanleon.lahoz@gmail.com>"]
edition = "2018"
description = "Transform csv file into an org-mode formatted table"
documentation = "https://github.com/juan-leon/orgtabler/"
homepage = "https://github.com/juan-leon/orgtabler/"
repository = "https://github.com/juan-leon/orgtabler/"
readme = "README.md"
keywords = ["emacs", "org-mode", "csv"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
prettytable-rs = "^0"
clap = { version = "^4", features = ["derive", "cargo"] }
color-eyre = "^0"
regex = "^1.9.4"
